--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,34 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+
+  <!-- Insert to your webpage before the </head> -->
+  <script src="sliderengine/jquery.js"></script>
+  <script src="sliderengine/amazingslider.js"></script>
+  <script src="sliderengine/initslider-1.js"></script>
+  <!-- End of head section HTML codes -->
 </head>
 <body>
+
+<div style="margin:30px auto;max-width:600px;">
+    
+    <!-- Insert to your webpage where you want to display the slider -->
+    <div id="amazingslider-1" style="display:block;position:relative;margin:16px auto 56px;">
+        <ul class="amazingslider-slides" style="display:none;">
+            <li><img src="images/crush.jpeg" alt="crush" /></li>
+            <li><img src="images/gnu-linux-mint-usability-wallpaper-for-1920x1080-hdtv-1080p-48-15.jpg" alt="gnu-linux-mint-usability-wallpaper-for-1920x1080-hdtv-1080p-48-15" /></li>
+            <li><img src="images/vim_movement_commenads.png" alt="vim_movement_commenads" /></li>
+        </ul>
+        <ul class="amazingslider-thumbnails" style="display:none;">
+            <li><img src="images/crush-tn.jpeg" /></li>
+            <li><img src="images/gnu-linux-mint-usability-wallpaper-for-1920x1080-hdtv-1080p-48-15-tn.jpg" /></li>
+            <li><img src="images/vim_movement_commenads-tn.png" /></li>
+        </ul>
+        <div class="amazingslider-engine" style="display:none;"><a href="http://amazingslider.com">jQuery Image Slideshow</a></div>
+    </div>
+    <!-- End of body section HTML codes -->
+    
+</div>
 
 <%= yield %>
 
