--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,14 +19,14 @@
     <!-- Insert to your webpage where you want to display the slider -->
     <div id="amazingslider-1" style="display:block;position:relative;margin:16px auto 56px;">
         <ul class="amazingslider-slides" style="display:none;">
-            <li><img src="images/crush.jpeg" alt="crush" /></li>
-            <li><img src="images/gnu-linux-mint-usability-wallpaper-for-1920x1080-hdtv-1080p-48-15.jpg" alt="gnu-linux-mint-usability-wallpaper-for-1920x1080-hdtv-1080p-48-15" /></li>
-            <li><img src="images/vim_movement_commenads.png" alt="vim_movement_commenads" /></li>
+            <li><img src="images/children.jpg" alt="children" /></li>
+            <li><img src="images/map.jpg" alt="map" /></li>
+            <li><img src="images/notebook.jpg" alt="notebook" /></li>
         </ul>
         <ul class="amazingslider-thumbnails" style="display:none;">
-            <li><img src="images/crush-tn.jpeg" /></li>
-            <li><img src="images/gnu-linux-mint-usability-wallpaper-for-1920x1080-hdtv-1080p-48-15-tn.jpg" /></li>
-            <li><img src="images/vim_movement_commenads-tn.png" /></li>
+            <li><img src="images/children-tn.jpg" /></li>
+            <li><img src="images/map-tn.jpg" /></li>
+            <li><img src="images/notebook-tn.jpg" /></li>
         </ul>
     </div>
     <!-- End of body section HTML codes -->
