Change locale feature

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,5 +8,6 @@ html
     script src="sliderengine/amazingslider.js"
     script src="sliderengine/initslider-1.js"
   body
+    == render 'layouts/locales'
     == render 'layouts/slides'
     == yield
