--- a/app/views/layouts/_locales.html.slim
+++ b/app/views/layouts/_locales.html.slim
@@ -1,2 +1,2 @@
 - [:es, :ca].each do |locale|
-  li ==link_to locale, params.merge(locale: locale), 'data-no-turbolink' => true
+  li ==link_to locale, params.merge(locale: locale)
