--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,5 +9,6 @@ html
     script src="sliderengine/initslider-1.js"
   body
     == render 'layouts/locales'
+    == render 'layouts/menu'
     == render 'layouts/slides'
     == yield
