Added some styles

--- a/app/views/layouts/_menu.html.slim
+++ b/app/views/layouts/_menu.html.slim
@@ -1,3 +1,3 @@
-li ==link_to 'Inici', home_index_path
-li ==link_to 'Situacio', location_index_path
-li ==link_to 'Contacte', contact_index_path
+li ==link_to 'INICI', home_index_path
+li ==link_to 'SITUACIO', location_index_path
+li ==link_to 'CONTACTE', contact_index_path
