--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,8 +12,8 @@ html
       nav
         == render 'layouts/menu'
         == render 'layouts/locales'
-    content
+    section
       == render 'layouts/slides'
       == yield
     footer
-      | Copyright © #{Time.now.year} EsPerTu Associació
+      | Copyright © #{Time.now.year} Associació Es Per Tu • C/ Duquessa D'Orleans, 11 2 piso • Telf. 627 579 633
