Adding image logo to the background

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,6 +8,7 @@ html
     script src="sliderengine/amazingslider.js"
     script src="sliderengine/initslider-1.js"
   body
+    div id='logo'
     header
       nav
         == render 'layouts/menu'
