--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,19 @@ body {
   font-family: 'Whitney SSm A', 'Whitney SSm B', "ff-meta-web-pro", sans-serif;
   font-size: 14px;
   color: #555555;
+  #logo {
+    background-image: url(image_path('logo.png'));
+    background-repeat: no-repeat;
+    background-position: right;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    bottom: 100px;
+    width: 600px;
+    height: 381px;
+  }
   header {
     width: 100%;
     height: 50px;
