--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,66 +12,11 @@
  *= require_tree .
  */
 body {
-  margin: 0px;
-  font-family: 'Whitney SSm A', 'Whitney SSm B', "ff-meta-web-pro", sans-serif;
-  font-size: 14px;
-  color: #333;
-  background-color: #ddd;
-  header {
-    width: 100%;
-    height: 450px;
-    background: #99cc6c;
-    text-align: center;
-    #logo {
-      margin: 20px;
-    }
-    nav {
-      margin: auto;
-      margin-top: 30px;
-      width: 600px;
-      height: 50px;
-      text-align: center;
-      li {
-        margin: 40px;
-        display: inline;
-        a {
-          font: 26px Tahoma, Helvetica, Arial, Sans-Serif;
-          text-align: center;
-          color: #555555;
-          text-shadow: 0px 2px 3px #bfff87;
-          text-decoration: none;
-          &:hover {
-            color: #222;
-          }
-        }
-      }
-    }
-  }
-  section {
-    width: 600px;
-    text-align: justify;
-    margin-left: auto;
-    margin-right: auto;
-    #fake-slider {
-      height: 200px;
-    }
-  }
-  footer {
-    font-size: 12px;
-    width: 100%;
-    text-align: center;
-    bottom: 15px;
-    position: fixed;
-  }
   .locales {
-    position: absolute;
-    float: right;
-    top: 10px;
-    right: 10px;
+    display: block;
     li {
-      float: left;
       margin: 15px;
-      display: inline;
+      display: inline-block;
       a {
         display: block;
         border: 0;
