--- a/public/css/grayscale.css
+++ b/public/css/grayscale.css
@@ -60,7 +60,7 @@ a:focus {
     border-bottom: 1px solid rgba(255,255,255,.3);
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    background-color: #1c6325;
+    background-color: #4f9658;
 }
 
 .navbar-brand {
@@ -112,7 +112,7 @@ a:focus {
 
     .top-nav-collapse {
         padding: 0;
-        background-color: #1c6325;
+        background-color: #4f9658;
     }
 
     .navbar-custom.top-nav-collapse {
