--- a/app/views/layouts/_contact.html.erb
+++ b/app/views/layouts/_contact.html.erb
@@ -3,6 +3,14 @@
     <div class="col-lg-8 col-lg-offset-2">
       <h2><%= t('contact.title') %></h2>
       <p><%= t('contact.p1') %>
+      <%= form_for(@contact, remote: true, authenticity_token: true) do |f| %>
+          <%= f.text_field :name, required: true %>
+          <%= f.email_field :email, required: true %>
+          <%= f.text_area :message, required: true, input_html: {rows: 10} %>
+          <div class='form-actions'>
+              <%= f.submit 'Send message', class: 'btn btn-primari' %>
+          </div>
+      <% end %>
       <ul class="list-inline banner-social-buttons">
         <li>
           <a href="https://www.facebook.com/groups/179372658783671/?fref=ts" class="btn btn-default btn-lg">
