--- a/app/views/layouts/_contact.html.erb
+++ b/app/views/layouts/_contact.html.erb
@@ -2,15 +2,20 @@
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2">
       <h2><%= t('contact.title') %></h2>
-      <p><%= t('contact.p1') %>
-      <%= form_for(@contact, remote: true, authenticity_token: true) do |f| %>
-          <%= f.text_field :name, required: true %>
-          <%= f.email_field :email, required: true %>
-          <%= f.text_area :message, required: true, input_html: {rows: 10} %>
-          <div class='form-actions'>
-              <%= f.submit 'Send message', class: 'btn btn-primari' %>
+      <%= form_for @contact, remote: true, authenticity_token: true, html: {class: 'form-inline'} do |f| %>
+          <%= f.text_field :name, required: true, placeholder: t('mail_form.attributes.contact.name'), class: "input-small" %>
+          <%= f.email_field :email, required: true, placeholder: t('mail_form.attributes.contact.email'), class: "input-small" %>
+          
+          <div class="controls">
+              <%= f.label :message %>
+              <div class="controls">
+                  <%= f.text_area :message, required: true, rows: '5' %>
+              </div>
           </div>
+          
+          <%= f.submit t('contact.send_message'), class: 'btn' %>
       <% end %>
+      <br />
       <ul class="list-inline banner-social-buttons">
         <li>
           <a href="https://www.facebook.com/groups/179372658783671/?fref=ts" class="btn btn-default btn-lg">
