Frontend for social links

--- a/app/views/layouts/_contact.html.erb
+++ b/app/views/layouts/_contact.html.erb
@@ -24,7 +24,12 @@
         </li>
         <li>
           <a href="http://associacioespertu.blogspot.com.es/" class="btn btn-default btn-lg">
-            <i class="fa fa-github fa-fw"></i> <span class="network-name">Blogspot</span>
+            <i class="fa fa-external-link fa-fw"></i> <span class="network-name">Blogspot</span>
+          </a>
+        </li>
+        <li>
+          <a href="http://www.github.com/aviscasillas/espertu" class="btn btn-default btn-lg">
+            <i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span>
           </a>
         </li>
       </ul>
