--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Grayscale - Free One Page Theme for Bootstrap 3</title>
+    <title>EsPerTu</title>
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
 
     <%= javascript_include_tag :application %>
