--- a/app/views/layouts/_locales.html.slim
+++ b/app/views/layouts/_locales.html.slim
@@ -1,3 +1,3 @@
-div class='locales'
+div class="locales"
   - [:es, :ca].each do |locale|
-    li ==link_to '', params.merge(locale: locale), class: locale
+    li = link_to '', params.merge(locale: locale), class: locale
