--- a/app/views/layouts/_about.html.slim
+++ b/app/views/layouts/_about.html.slim
@@ -1,7 +1,8 @@
 section id="about" class="container content-section text-center"
-  div class="row"
-    div class="col-lg-8 col-lg-offset-2"
-      h2 = t('about.title')
-      p = t('about.p1')
-      p = t('about.p2')
-      p = t('about.p3')
+  div class="about-section"
+    div class="row"
+      div class="col-lg-8 col-lg-offset-2"
+        h2 = t('about.title')
+        p = t('about.p1')
+        p = t('about.p2')
+        p = t('about.p3')
